NCC/judge/USERS/asda/error.txt
/home/admin/PycharmProjects/NCCGIT/NCC/judge/USERS/asda/1/57220.c:2:4: error: unknown type name ‘function’
    function foo(items) 
    ^
/home/admin/PycharmProjects/NCCGIT/NCC/judge/USERS/asda/1/57220.c: In function ‘foo’:
/home/admin/PycharmProjects/NCCGIT/NCC/judge/USERS/asda/1/57220.c:2:13: warning: type of ‘items’ defaults to ‘int’ [-Wimplicit-int]
    function foo(items) 
             ^
/home/admin/PycharmProjects/NCCGIT/NCC/judge/USERS/asda/1/57220.c:4:2: error: unknown type name ‘var’
  var x = "All this is syntax highlighted";
  ^
/home/admin/PycharmProjects/NCCGIT/NCC/judge/USERS/asda/1/57220.c:4:10: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  var x = "All this is syntax highlighted";
          ^
